tests/ui/object-safety/assoc_const_bounds_sized.stderr
error: expected one of `!`, `(`, `+`, `::`, `;`, `<`, or `=`, found keyword `where`
  --> $DIR/assoc_const_bounds_sized.rs:3:9
   |
LL | trait Foo {
   |           - while parsing this item list starting here
LL |     const BAR: bool
   |                    - expected one of 7 possible tokens
LL |         where
   |         ^^^^^ unexpected token
LL |             Self: Sized;
LL | }
   | - the item list ends here

error: aborting due to previous error

